force-app/main/default/objects/Insurnce__c/Insurnce__c.object-meta.xml
<CustomObject>
    <label>Insurance</label>
    <nameField>
        <label>Insurnce</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>