force-app/main/default/objects/Insurnce__c/fields/Date_of_surrendered__c.field-meta.xml
<CustomField>
    <fullName>Date_of_surrendered__c</fullName>
    <label>Date of surrendered</label>
    <type>Date</type>
</CustomField>