force-app/main/default/objects/Insurnce__c/fields/Insurance_No__c.field-meta.xml
<CustomField>
    <fullName>Insurance_No__c</fullName>
    <label>Insurance No</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INS-(000)</fullName>
            </value>
            <value>
                <fullName>INS-(0001)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>