force-app/main/default/objects/Insurnce__c/fields/Insurance_Period__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Period__c</fullName>
    <label>Insurance Period</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10,</fullName>
            </value>
            <value>
                <fullName>20,</fullName>
            </value>
            <value>
                <fullName>30,</fullName>
            </value>
            <value>
                <fullName>3,</fullName>
            </value>
            <value>
                <fullName>2,</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>