force-app/main/default/objects/Insurnce__c/fields/Insurer__c.field-meta.xml
<CustomField>
    <fullName>Insurer__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Insurance</relationshipLabel>
    <relationshipName>Insurance</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>