force-app/main/default/objects/Insurnce__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Force</fullName>
            </value>
            <value>
                <fullName>Claimed</fullName>
            </value>
            <value>
                <fullName>surrendered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>